# geolis

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/agents/: quality-checker.md  refactor.md
.claude/commands/: dev-implement.md  dev-viewer.md  doc-config.md  doc-update.md  git-commit.md  git-issue.md  git-pr.md  impl-verify.md
.claude/rules/: ai-output.md  build.md  debug.md  rust-coding.md  test-data.md  viewer.md
docs/design/: ROADMAP.md
examples/debug/: main.rs  test_meshes.rs  viewer.rs
examples/debug/patterns/: basic_strokes.rs  boolean.rs  extrude.rs  face_creation.rs  mod.rs  nurbs_boolean.rs  nurbs_constructed.rs  nurbs_curves.rs  nurbs_surface.rs  nurbs_trimmed.rs  nurbs_window.rs  offset_intersection.rs  polyline_offset.rs  primitives.rs  revolve.rs  segmented_prism.rs  shell.rs  split.rs  stroke_joins.rs  wall_offset.rs  wall_self_intersect.rs  wall_with_window.rs
examples/debug/test/: boolean.rs  face_creation.rs  mod.rs  offset_intersection.rs  shell.rs  wall_offset.rs
examples/viewer/: main.rs  test_meshes.rs
examples/viewer/patterns/: basic_strokes.rs  mod.rs  offset_intersection.rs  offset_intersection_test.rs  polyline_offset.rs  stroke_joins.rs
src/: error.rs  lib.rs
src/diagnostics/: mod.rs
src/geometry/: mod.rs  pline.rs  pline_fillet.rs  pline_sampling.rs
src/geometry/curve/: arc.rs  circle.rs  ellipse.rs  line.rs  mod.rs
src/geometry/nurbs/: basis.rs  classify.rs  curve.rs  (+3 more)
src/math/: arc_2d.rs  distance_2d.rs  intersect_2d.rs  intersect_3d.rs  mod.rs  polygon_2d.rs  polygon_3d.rs
src/operations/: mod.rs
src/tessellation/: edge_samples.rs  mod.rs  stroke_style.rs  tessellate_curve.rs  tessellate_face.rs  tessellate_nurbs.rs  tessellate_solid.rs  tessellate_stroke.rs  tessellate_trimmed.rs  tessellate_with_holes.rs
src/topology/: dump.rs  edge.rs  face.rs  mod.rs  name.rs  shell.rs  solid.rs  trim.rs  vertex.rs  wire.rs
(+119 files in other folders)
