[package]
description = "A CAD kernel written in Rust"
edition = "2021"
license = "MIT"
name = "geolis"
version = "0.1.0"

[dependencies]
nalgebra = "0.34.1"
slotmap = "1.1.1"
thiserror = "2.0.18"

[dev-dependencies]
approx = "0.5.1"
revion_app = { path = "../revion/crates/revion_app" }
revion_core = { path = "../revion/crates/revion_core" }
revion_ui = { path = "../revion/crates/revion_ui" }
revion_macro = { path = "../revion/crates/revion_macro" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "viewer"
path = "examples/viewer/main.rs"

[lints.clippy]
all = {level = "warn", priority = -1}
expect_used = "deny"
pedantic = {level = "warn", priority = -1}
unwrap_used = "deny"
